--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
   </div>
   <div class="col order-last">
     <!-- input field right -->
-    <app-product-details></app-product-details>
+    <app-new-product></app-new-product>
 
+    <app-product-details></app-product-details>
 
   <div class="container" style="margin: left 0px;">
     <div class="row">
