--- a/src/app/my-scene/my-scene.component.html
+++ b/src/app/my-scene/my-scene.component.html
@@ -1,2 +1,2 @@
 
-<canvas class="webgl" width="850px" height="650px" style="border:1px solid black ;"></canvas>
+<canvas #canvas id="canvas" width="850px" height="650px" style="border:1px solid black ;"></canvas>
