--- a/src/app/new-product/new-product.component.html
+++ b/src/app/new-product/new-product.component.html
@@ -1,5 +1,5 @@
 <div class="input-box">
-    <button type="button" class="btn btn-primary" id="submitFields" style="margin: 10px;">
+    <button type="button" class="btn btn-primary" style="margin: 10px;">
         <h3>New Product</h3>
     </button>
 </div>
