--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="col order-last">
     <!-- input field right -->
-    <app-new-product></app-new-product>
+    <div app-new-product></div>
 
     <app-product-details></app-product-details>
 
