--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,24 +1,24 @@
 
     <div class="input-group flex-nowrap">
       <span class="input-group-text">ProductID</span>
-      <input type="text" class="form-control" id="ProductID" readonly>
+      <input type="text" class="form-control" id="ProductID" >
     </div>
     <div class="input-group flex-nowrap">
       <span class="input-group-text" >Temperature</span>
-      <input type="text" class="form-control"  id="Temperature" readonly>
+      <input type="text" class="form-control"  id="Temperature" >
     </div>
 
     <div class="input-group flex-nowrap">
       <span class="input-group-text" >Weight</span>
-      <input type="text" class="form-control"  id="Weight" readonly>
+      <input type="text" class="form-control"  id="Weight" >
     </div>
 
     <div class="input-group flex-nowrap">
       <span class="input-group-text" >Quantity</span>
-      <input type="text" class="form-control"  id="quantity"readonly >
+      <input type="text" class="form-control"  id="quantity" >
     </div>
 
     <div class="input-group flex-nowrap">
       <span class="input-group-text" >Dimensions</span>
-      <input type="text" class="form-control"  id="Dimentions" readonly>
+      <input type="text" class="form-control"  id="Dimentions" >
     </div>
