added services for renderer scene camera and box need to fix move box function

--- a/src/app/check-stage/check-stage.component.html
+++ b/src/app/check-stage/check-stage.component.html
@@ -2,7 +2,7 @@
 <!-- Stage fields -->
 <div class="input-group mb-3">
   <!-- Buttons and input fields -->
-  <button class="btn btn-outline-primary" type="button" id="stage1" >S1 Check Temperature</button>
+  <button class="btn btn-outline-primary" type="button" id="stage1" (click)="moveStraight()" >S1 Check Temperature</button>
 <input type="text" class="form-control" placeholder="Temperature" id="stage1value" value="21">
 </div>
 <div class="input-group mb-3">
