--- a/src/app/check-stage/check-stage.component.html
+++ b/src/app/check-stage/check-stage.component.html
@@ -3,17 +3,17 @@
 <div class="input-group mb-3">
   <!-- Buttons and input fields -->
   <button class="btn btn-outline-primary" type="button"  disabled >S1 Check Temperature</button>
-<input type="text" class="form-control" placeholder="Temperature" #stage1value value="21">
+<input type="text" class="form-control" placeholder="Temperature" [(ngModel)]="stage1Ref" value="{{stage1Ref}}">
 </div>
 <div class="input-group mb-3">
 <button class="btn btn-outline-primary" type="button"  disabled >S2 Check Weight</button>
-<input type="text" class="form-control" placeholder="Weight"#stage2value value="33">
+<input type="text" class="form-control" placeholder="Weight" [(ngModel)]="stage2Ref" value="{{stage2Ref}}">
 </div>
 <div class="input-group mb-3">
 <button class="btn btn-outline-primary" type="button"   disabled >S3 Check Quantity</button>
-<input type="text" class="form-control" placeholder="Quality"#stage3value value="45">
+<input type="text" class="form-control" placeholder="Quality" [(ngModel)]="stage3Ref" value="{{stage3Ref}}">
 </div>
 <div class="input-group mb-3">
 <button class="btn btn-outline-primary" type="button"   disabled >S4 Check Dimensions</button>
-<input type="text" class="form-control" placeholder="Dimentions"#stage4value value="21">
+<input type="text" class="form-control" placeholder="Dimentions" [(ngModel)]="stage4Ref" value="{{stage4Ref}}">
 </div>
