--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,10 @@
-<div class="row">
-  <div class="col order-first">
-    <!-- canvas field -->
-    
+
+<mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)">
+  <mat-tab label="First">  
+    <div app-new-product></div>  
+  </mat-tab>
+  <mat-tab label="Second">  
     <app-my-scene></app-my-scene>
+  </mat-tab>
+</mat-tab-group>
 
-    
-  </div>
-  <div class="col order-last">
-    <!-- input field right -->
-    <div app-new-product></div>
-
-    <app-product-details></app-product-details>
-
-  <div class="container" style="margin: left 0px;">
-    <div class="row">
-      <div class="col" style="padding:2px ;">
-           <!-- stage fields -->
-           <app-check-stage></app-check-stage>
-
-      </div>
-      <div class="col" style="padding:1px">
-        <!-- results div -->
-        <app-results-bar></app-results-bar>
-
-      </div>
-    </div>
-    </div>
-  </div>
-</div>
